--- a/src/MSetExplorer/ColorBandSetImportExportDialog/ColorBandSetImportExportWindow.xaml
+++ b/src/MSetExplorer/ColorBandSetImportExportDialog/ColorBandSetImportExportWindow.xaml
@@ -1,12 +1,11 @@
-﻿<Window x:Class="MSetExplorer.ColorBandSetOpenSaveWindow"
+﻿<Window x:Class="MSetExplorer.ColorBandSetImportExportWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MSetExplorer" d:DataContext="{d:DesignInstance Type=local:ColorBandSetOpenSaveViewModel}"
+        xmlns:local="clr-namespace:MSetExplorer" d:DataContext="{d:DesignInstance Type=local:ColorBandSetImportExportViewModel}"
         mc:Ignorable="d"
-        Title="Open ColorBandSet" Height="1000" Width="860">
-    
+        Title="Import ColorBandSet" Height="1000" Width="860">
     <Grid>
 
         <Grid.RowDefinitions>
@@ -63,8 +62,8 @@
                 <!--<StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                     <TextBlock Width="90" Margin="10, 0, 20, 0" FontSize="16" Text="Version:" VerticalAlignment="Top"/>
                     <TextBox x:Name="txtVersionNumber" Text="{Binding SelectedVersionNumber}" Width="50" Height="22"/>
-                </StackPanel>-->                
-                
+                </StackPanel>-->
+
             </StackPanel>
         </Border>
 
