--- a/src/MSetExplorer/ColorBandSetOpenSaveDialog/ColorBandSetOpenSaveWindow.xaml
+++ b/src/MSetExplorer/ColorBandSetOpenSaveDialog/ColorBandSetOpenSaveWindow.xaml
@@ -34,13 +34,13 @@
 
                 <ListView.View>
                     <GridView>
-                        <!--<GridViewColumn Header="Id" Width="250" DisplayMemberBinding="{Binding SerialNumber}" />-->
                         <GridViewColumn Header="Name" Width="130" DisplayMemberBinding="{Binding Name}" />
                         <GridViewColumn Header="Iterations" Width="90" DisplayMemberBinding="{Binding MaxIterations}" />
                         <GridViewColumn Header="Band Count" Width="90" DisplayMemberBinding="{Binding NumberOfBands}" />
                         <GridViewColumn Header="Created" Width="160" DisplayMemberBinding="{Binding DateCreated}" />
                         <GridViewColumn Header="Accessed" Width="160" DisplayMemberBinding="{Binding LastAccessed}" />
-                        <GridViewColumn Header="Description"  DisplayMemberBinding="{Binding Description}" />
+                        <GridViewColumn Header="Description" DisplayMemberBinding="{Binding Description}" />
+                        <!--<GridViewColumn Header="Id" Width="250" DisplayMemberBinding="{Binding ColorBandSerialNumber}" />-->
                     </GridView>
                 </ListView.View>
             </ListView>
