--- a/src/MSetExplorer/ColorBandSetOpenSaveDialog/ColorBandSetOpenSaveWindow.xaml
+++ b/src/MSetExplorer/ColorBandSetOpenSaveDialog/ColorBandSetOpenSaveWindow.xaml
@@ -38,7 +38,7 @@
                         <GridViewColumn Header="Iterations" Width="90" DisplayMemberBinding="{Binding MaxIterations}" />
                         <GridViewColumn Header="Band Count" Width="90" DisplayMemberBinding="{Binding NumberOfBands}" />
                         <GridViewColumn Header="Created" Width="160" DisplayMemberBinding="{Binding DateCreated}" />
-                        <GridViewColumn Header="Accessed" Width="160" DisplayMemberBinding="{Binding LastAccessed}" />
+                        <GridViewColumn Header="Last Used" Width="160" DisplayMemberBinding="{Binding DateLastUsed}" />
                         <GridViewColumn Header="Description" DisplayMemberBinding="{Binding Description}" />
                         <!--<GridViewColumn Header="Id" Width="250" DisplayMemberBinding="{Binding ColorBandSerialNumber}" />-->
                     </GridView>
